public/stylesheets/app.css
/* app stylesheet */

html, body {
  height: 100%;
}

body {
  width: 100%;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 0px;
  padding: 0px;
  color: #555555;
  background-color: #FAFAFA;
  /*background-image: url('/assets/img/geometry.png');*/
}

.ribbon {
  z-index: 1;
  position: absolute;
  top: 0;
  right: 0;
  padding: .1em 3em;
  border: 1px solid rgba(0, 0, 0, 0.1);
  background-color: #eeeeee;
  color: #555555;
  font-weight: bold;

  -webkit-transform: translateX(75%) rotate(45deg) translateX(-30%);
  transform: translateX(75%) rotate(45deg) translateX(-30%);
  -webkit-transform-origin: top left;
  transform-origin: top left;
}

.wrapper {
  width: 100%;
  height: 100%;
  min-width: 960px;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
  position: relative;
}

.display-table {
  display: table;
  table-layout: fixed;
}

.display-row {
  display: table-row;
}

.no-min-width {
  min-width: 0;
}

a {
  text-decoration: none;
  color: #5FAACE;
  cursor: pointer;
}

a:hover {
  text-decoration: underline;
}

code {
  padding: 2px 4px;
  color: #D14;
  white-space: nowrap;
  background-color: #F7F7F9;
  border: 1px solid #E1E1E8;
}

.bold {
  font-weight: bold;
}

.ui.table tr.odd {
  background-color: rgba(0, 0, 50, 0.02) !important;
}
.ui.table tr.even {
  background-color: #FFFFFF !important;
}

#container {
  position: relative;
  height: 100%;
}

#header {
  position: relative;
  width: 100%;
  margin: 0px;
  padding: 0px;
  background: #A1CF64;
}

#header .inner {
  position: relative;
  width: 960px;
  margin: 0 auto;
  padding-top: 85px;
  min-height: 40px;
  background-image: url('/assets/img/logo-white.png');
  background-repeat: no-repeat;
  background-position: 0px 5px;
}

#header .inner > .menu {
  margin: 0;
}

#content {
  width: 960px;
  margin: 10px auto 30px auto;
  margin-top: 10px;
  border-radius: 5px;
}

#footer {
  position: relative;
  margin: 10px 0 0 0;
  width: 100%;
  padding: 0;
  clear: both;
}

#footer .grid {
  width: 960px;
  margin: 0 auto;
  height: 100%;
  background-image: url('/assets/img/logo-transparent.png');
  background-repeat: no-repeat;
  background-position: left top -40px;
}

#footer .grid .column {
  font-size: 0.8rem;
  margin: 0;
  padding: 0.5rem;
}

#footer p {
  margin: 0;
}

.top-right {
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 99;
}
.shifted.top-right {
  right: 70px;
}

.ui.mini.progress { margin: 0; }
.ui.mini.progress .bar { height: 0.8rem; }

#language-selector {
  padding: 5px;
}

.ui.borderless.input > input {
  border: none;
}

.ui.segment.dropzone {
  min-height: 100px;
  border: 3px dashed #CCC;
  box-shadow: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
}

.ui.segment.dropzone.over {
  border-style: solid;
}

.dropzone .dimmer * {
  pointer-events: none;
}

.bottom-spaced {
  margin-bottom: 10px;
}

.ui.segment.no-radius {
  border-radius: 0;
}

.ui.modal.scrollable {
  max-height: 90%;
  overflow: auto;
}

textarea#log-lines {
  font-size: 0.7em;
  word-break: break-all;
}

.inverted.popup a {
  color: inherit;
}

.progress > .bar {
  text-align: center;
  line-height: 23px;
  color: #FFF;
}

#settings-modal .actions .button {
  min-width: 200px;
}

#platforms-head .column {
  padding: 0.2rem 1rem;
  vertical-align: middle;
}

.bottom-padded-group > div {
  padding-bottom: 10px;
}

.ui.label.normalized {
  text-transform: none;
}

.inline-labels .ui.label {
  word-break: break-all;
  margin: 2px;
}

.justify.aligned { text-align: justify !important; }
.right.aligned   { text-align: right !important; }
.left.aligned    { text-align: left !important; }
.center.aligned  { text-align: center !important; }

.terminal .error { color: red; }
.terminal .warn  { color: orange; }
.terminal .info  { color: green; }
.terminal .silly { color: grey; }

/**
 * Feedback sidebar
 */
.feedback.button {
  position: absolute;
  top: 150px;
}
.feedback.sidebar .close {
  position: absolute;
  top: 10px;
  right: 10px;
  margin: 0;
  z-index: 500;
}

/**
 * Social icons of login page
 */
#social {
  float: right;
}
#social a {
  text-decoration: none;
}
#social .facebook.colored {
  color: #3B579D;
}
#social .google.plus.colored {
  color: #D34836;
}
#social .twitter.colored {
  color: #4092CC;
}

/**
 * Progressbar and download/cancel buttons
 */
.progress-header {
  display: table;
}
.progress-header > div {
  display: table-cell;
  width: 100%;
  white-space: nowrap;
  padding: 5px;
  vertical-align: middle;
}
.progress-header > div:first-child {
  padding-left: 0;
}
.progress-header > div:last-child {
  padding-right: 0;
}

